--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   shared_preferences: ^2.2.2
   http: ^1.1.2
+  confirm_dialog: ^1.0.3
 
 dev_dependencies:
   flutter_test:
