--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^1.1.2
   confirm_dialog: ^1.0.3
   flutter_launcher_icons: ^0.13.1
+  image_picker: ^1.0.5
 
 flutter_launcher_icons:
   image_path: "assets/images/icon_launcher.png"
